--- a/app/static/css/rightBar.1.css
+++ b/app/static/css/rightBar.1.css
@@ -125,6 +125,40 @@
   cursor: pointer;
 }
 
+.preview_image_fullscreen {
+  display: none;
+  position: fixed;
+  left: 0px;
+  top: 0px;
+
+  width: 100%;
+  height: 100%;
+
+  background-color: #000;
+
+  text-align: center;
+}
+
+.preview_image_fullscreen_image {
+  height: calc(100% - 25px);
+  
+}
+
+.preview_display_type_fullscreen {
+  position: absolute;
+  left: 0px;
+  bottom: 0px;
+  height: 25px;
+  width: 100%;
+
+  /* border-bottom: 1px solid var(--main-border-color); */
+  border-top: 1px solid var(--main-border-color);
+
+  background-color: var(--bg-color);
+
+  color: var(--main-font-color);
+}
+
 .preview_video_fullscreen {
   position: fixed;
   top: 0px;
