--- a/app/templates/m-main.html
+++ b/app/templates/m-main.html
@@ -119,6 +119,11 @@
         <!--продпросмотр фотографии-->
         <div id="file_activity_view">
           <div class="preview_image" id="preview_image_div">
+            
+            <div class="preview_image_mobile_move" style="left: 0px" onclick="next_image(true)"></div>
+
+            <div class="preview_image_mobile_move" style="right: 0px" onclick="next_image()"></div>
+
             <img id="preview_image" class="" src="" width="100%" />
 
             <div class="preview_display_type">
