--- a/app/static/css/mobile/bottomBar.1.css
+++ b/app/static/css/mobile/bottomBar.1.css
@@ -48,7 +48,7 @@
   position: absolute;
   left: 0px;
   bottom: 0px;
-  width: calc(100% - (175px + 50px));
+  width: calc(100% - 175px);
   height: 3px;
   border-top: 1px solid var(--top-border-color);
   background-color: var(--top-color);
