--- a/app/static/css/rightBar.1.css
+++ b/app/static/css/rightBar.1.css
@@ -125,6 +125,10 @@
   cursor: pointer;
 }
 
+.preview_image_image {
+  border-top: 1px solid var(--main-border-color);
+}
+
 .preview_image_fullscreen {
   display: none;
   position: fixed;
@@ -134,29 +138,63 @@
   width: 100%;
   height: 100%;
 
-  background-color: #000;
+  background-color: var(--preview-bg);
 
   text-align: center;
 }
 
 .preview_image_fullscreen_image {
   height: calc(100% - 25px);
-  
+
+}
+
+.preview_image_fullscreen_move {
+  position: fixed;
+  top: 25px;
+  width: 10%;
+  height: calc(100% - 25px);
+
+  cursor: pointer;
+}
+
+.preview_image_fullscreen_move img {
+  /* filter: invert(80%); */
+  opacity: 0;
+}
+
+.preview_image_fullscreen_move:hover img {
+  opacity: 0.3;
 }
 
 .preview_display_type_fullscreen {
   position: absolute;
   left: 0px;
-  bottom: 0px;
+  top: 0px;
   height: 25px;
   width: 100%;
 
   /* border-bottom: 1px solid var(--main-border-color); */
-  border-top: 1px solid var(--main-border-color);
+  border-bottom: 1px solid var(--main-border-color);
 
   background-color: var(--bg-color);
 
   color: var(--main-font-color);
+}
+
+.preview_image_fullscreen_close_button {
+  position: absolute;
+  right: 0px;
+  top: 0px;
+  width: 100px;
+  height: 25px;
+  border-left: 1px solid var(--main-border-color);
+  background-color: var(--bg-color);
+
+  cursor: pointer;
+}
+
+.preview_image_fullscreen_close_button:hover {
+  background-color: var(--hover-color);
 }
 
 .preview_video_fullscreen {
@@ -167,7 +205,7 @@
   width: 100%;
   height: 100%;
 
-  background-color: #000;
+  background-color: var(--preview-bg);
 }
 
 .preview_video_fullscreen img {
@@ -319,7 +357,7 @@
 }
 
 .preview_rendering_selector:hover {
-  background-color: var(--top-hover-color);
+  background-color: var(--hover-color);
 }
 
 /* list files */
