--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -423,7 +423,7 @@
 
     <!--изображение на полный экран-->
     <div id="preview_image_fullscreen_div" class="preview_image_fullscreen block_select">
-      <img id="preview_image_fullscreen" class="preview_image_fullscreen_image" src="/download?path=0&dir=&file=3.png" />
+      <img id="preview_image_fullscreen" class="preview_image_fullscreen_image" src="" />
 
       <div class="preview_image_fullscreen_move" style="left: 0px" onclick="next_image(true)">
         <img class="icon" width="100%" height="100%" style="transform: rotate(-180deg)" src="static/img/player/back-image.svg"/>
