--- a/app/static/css/admin/main.1.css
+++ b/app/static/css/admin/main.1.css
@@ -24,7 +24,9 @@ ul {
   padding-left: 0;
 }
 
-input {outline:none;}
+input {
+  outline:none;
+}
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica,Arial,sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
@@ -176,7 +178,7 @@ body {
     border-radius: 5px;
     border: 1px solid #30363D;
   }
-  
+
 }
 
 .alert_top_name {
