--- a/app/templates/admin.html
+++ b/app/templates/admin.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href = "static/css/admin/main_page.1.css"/>
     <link rel="stylesheet" href = "static/css/admin/checkBox.1.css"/>
 
+    <link rel="stylesheet" href="https://unpkg.com/xterm@4.11.0/css/xterm.css"/>
+
   </head>
 
   <body bgcolor = "#0D1117" style="overflow-x:hidden;">
@@ -306,9 +308,12 @@
           <h2>Terminal</h2>
         </div>
         <hr class="main_page_hr">
-        <h2 align="center">IN FUTURE UPDATES</h2>
+        <p style="font-weight: bold; font-size: 16; margin: 10px;">status: connected</p>
       </div>
       <br>
+      <div class="border border_size" style="background-color: #000;">
+        <div style="width: 98.5%; height: 98.5%; margin: 5px;" id="terminal_div"></div>
+      </div>
     </div>
 
     <!--alert-->
@@ -334,5 +339,41 @@
   <script type="text/javascript" src="static/js/admin/logs.1.js"></script>
   <script type="text/javascript" src="static/js/admin/history.1.js"></script>
 
+  <!-- xterm -->
+  <script src="https://unpkg.com/xterm@4.11.0/lib/xterm.js"></script>
+  <script src="https://unpkg.com/xterm-addon-fit@0.5.0/lib/xterm-addon-fit.js"></script>
+  <script src="https://unpkg.com/xterm-addon-web-links@0.4.0/lib/xterm-addon-web-links.js"></script>
+  <script src="https://unpkg.com/xterm-addon-search@0.8.0/lib/xterm-addon-search.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.min.js"></script>
+
+  <script>
+  const term = new Terminal({
+    cursorBlink: true,
+    macOptionIsMeta: true,
+    scrollback: true,
+  });
+  // term.attachCustomKeyEventHandler(customKeyEventHandler);
+  // https://github.com/xtermjs/xterm.js/issues/2941
+  const fit = new FitAddon.FitAddon();
+  term.loadAddon(fit);
+  term.loadAddon(new WebLinksAddon.WebLinksAddon());
+  term.loadAddon(new SearchAddon.SearchAddon());
+
+  term.open(document.getElementById("terminal_div"));
+  fit.fit();
+  term.resize(75, 25);
+  console.log(`size: ${term.cols} columns, ${term.rows} rows`);
+  fit.fit();
+  term.writeln("copy: ctrl+shift+x");
+  term.writeln("pase: ctrl+shift+v");
+  for (let i = 0; i < 75; i++) {
+    term.write("-");
+  }
+  term.writeln('')
+  term.onData((data) => {
+    console.log("browser terminal received new data:", data);
+    // socket.emit("pty-input", { input: data });
+  });
+  </script>
 
 </html>
