--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -59,6 +59,10 @@
         </div>
       </label>
 
+      <div class="terminal_button_style">
+
+      </div>
+
       <!--информация о диске-->
       <div class="disk_info">
         <img class="icon" style="margin: 5px 5px" width="18" height="18" src="static/img/dvd-disk.svg">
