--- a/app/static/css/leftBar.1.css
+++ b/app/static/css/leftBar.1.css
@@ -18,7 +18,7 @@
   height: 100%;
   width: var(--width-left-bar);
 
-  background-color: var(--top-color)/*var(--bg-color)*/;
+  background-color: var(--left-color)/*var(--bg-color)*/;
 
   border-right: 1px solid var(--top-border-color);
 }
@@ -77,7 +77,7 @@
   border-top: 1px solid var(--top-border-color);
   border-bottom: 1px solid var(--top-border-color);
   border-right: 1px solid var(--top-border-color);
-  background-color: var(--top-color);
+  background-color: var(--left-color);
 
   cursor: pointer;
 }
@@ -91,7 +91,7 @@
   width: 200px;
   height: 35px;
   border-top: 1px solid var(--top-border-color);
-  background-color: var(--top-color);
+  background-color: var(--left-color);
 
   bottom: 0px;
   left: 0px;
@@ -114,4 +114,8 @@
   left: 0px;
 
   cursor: pointer;
+}
+
+.terminal_button_style:hover {
+  background-color: var(--hover-color);
 }
