--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -59,14 +59,16 @@
         </div>
       </label>
 
+      <!--терминал-->
       <div class="terminal_button_style">
-
+        <img class="icon" style="margin: 5px 5px" width="25" height="25" src="static/img/admin/terminal.svg">
+        <p style="margin: -28px 40px">terminal</p>
       </div>
 
       <!--информация о диске-->
       <div class="disk_info">
         <img class="icon" style="margin: 5px 5px" width="18" height="18" src="static/img/dvd-disk.svg">
-        <p id="disk_converted" style="margin: -23px 30px">25.2GB / 100GB</p>
+        <p id="disk_converted" style="margin: -23px 30px">Loading...</p>
       </div>
 
       <!--информация о диске в виде прогресс бара-->
