--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -60,9 +60,11 @@
       </label>
 
       <!--терминал-->
-      <div class="terminal_button_style">
+      <div class="terminal_button_style block_select">
         <img class="icon" style="margin: 5px 5px" width="25" height="25" src="static/img/admin/terminal.svg">
-        <p style="margin: -28px 40px">terminal</p>
+        <p style="margin: -30px 40px">terminal</p>
+        <p style="margin: 24px 40px;" class="terminal_button_style_online">0 is online</p>
+        <img class="icon" style="position:absolute; right: 10px; top: 10px; rotate: -90deg" width="10" height="10" src="static/img/triangle.svg">
       </div>
 
       <!--информация о диске-->
