--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -323,7 +323,7 @@
     </div>
 
     <!--кнопка для открытия настроек-->
-    <div id="user_button" class="user_button block_select button_margin" onclick="open_close_user_button()">
+    <div id="user_button" class="user_button_no_selected_color user_button block_select button_margin" onclick="open_close_user_button()">
       <img class="icon_topBar" style="margin: 0px 15px" width="25" height="25" src="static/img/user.svg">
       <p class="top_bar_font_color" id="user_status" style="margin: -22px 45px; color: #959DA5">user</p>
       <p class="top_bar_font_color" id="user_name" style="margin: 15px 45px">100LAR</p>
@@ -331,7 +331,7 @@
     </div>
 
     <!--кнопка для выбора диска-->
-    <div id="path_select_button" class="path_select_button block_select button_margin" onclick="open_close_path_button()">
+    <div id="path_select_button" class="path_select_button path_select_button_no_selected_color block_select button_margin" onclick="open_close_path_button()">
       <img class="icon_topBar" style="margin: 10px 15px" width="25" height="25" src="static/img/dvd-disk.svg">
       <p class="top_bar_font_color" id="path_status_size" style="position: absolute; margin: -42px 45px; color: #959DA5">1Gb</p>
       <p class="top_bar_font_color" id="path_name" style="position: absolute; margin: -28px 45px">home</p>
