--- a/app/static/css/main.1.css
+++ b/app/static/css/main.1.css
@@ -28,6 +28,8 @@
   --top-border-color: #141414;
   --main-border-color: #141414;
 
+  --main-hover-border-color: #AAAAAA;
+
   --top-checkBox-color: #999999;
   --main-checkBox-color: #999999;
 
