--- a/app/static/css/dialog.1.css
+++ b/app/static/css/dialog.1.css
@@ -108,15 +108,15 @@
 
   height: 35px;
 
-  border-radius: 4px;
+  border-radius: 8px;
   border: 1px solid var(--main-border-color);
-  background-color: var(--bg-color);
+  background-color: var(--hover-color);
 
   cursor: pointer;
 }
 
 .dialog_button:hover {
-  background-color: var(--hover-color);
+  border: 1px solid var(--main-hover-border-color);
 }
 
 .red_dialog_button {
