--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -54,7 +54,7 @@
       </div>
 
       <label for="fileElem">
-        <div class="small_button_style block_select button_margin" style="top: 181px; width: 180px; left: 10px;">
+        <div class="small_button_style block_select button_margin" style="top: 190px; width: 180px; left: 10px;">
           <img class="icon" width="20" height="20" src="static/img/upload.svg">
           <p>upload file</p>
         </div>
@@ -373,7 +373,7 @@
         </div>
       </div>
 
-      <img class="icon" width="60" height="60" style="position: absolute; right: 30px; top: 45px;" src="static/img/warning.svg">
+      <img class="svg_orage" width="60" height="60" style="position: absolute; right: 30px; top: 45px;" src="static/img/warning.svg">
       <h3 style="position: absolute; top: 40px; left: 110px;" align="right">There is no disk space to modify the file.</h3>
       <p style="position: absolute; top: 70px; left: 50px;" align="right">Delete unnecessary files or ask the administrator to increase the limit.</p>
 
