--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -65,7 +65,11 @@
         <img class="icon" style="margin: 5px 5px" width="25" height="25" src="static/img/admin/terminal.svg">
         <p style="margin: -30px 40px">terminal</p>
         <p style="margin: 24px 40px;" class="terminal_button_style_online">0 is online</p>
-        <img class="icon" id="terminal_button_triangle" style="position:absolute; right: 10px; top: 10px; rotate: -90deg" width="10" height="10" src="static/img/triangle.svg">
+        <img class="icon" id="terminal_button_triangle" style="position:absolute; right: 15px; top: 15px; rotate: 0deg" width="10" height="10" src="static/img/triangle.svg">
+      </div>
+
+      <div class="terminal_list_div">
+        <ul id="terminal_list"></ul>
       </div>
 
       <!--информация о диске-->
@@ -85,7 +89,6 @@
       <!--закрытие панели-->
       <div class="file_close_button block_select button_margin" onclick="close_rightBar()">
         <img class="icon" width="20" height="20" src="static/img/cross.svg">
-        <p>close</p>
       </div>
 
       <!--информация о выбранном файле-->
@@ -120,7 +123,7 @@
         <div class="file_info_div">
           <p id="file_type" style="margin-top: 10px;">type: None</p>
           <p id="file_size">size: None</p>
-          <p id="file_path">path: None</p>
+          <p id="file_path" style="white-space: nowrap;">path: None</p>
           <p id="file_date">date of change: None</p>
           <textarea class="input_style fileDescription" style="display: none"></textarea>
         </div>
@@ -291,9 +294,9 @@
 
     <div id="leftBar_user" class="leftBar_user" style="display: none">
 
-      <div id="admin_panel" class="small_button_left_style block_select button_margin" style="top: 45px; display: none" onclick="openInNewTab('admin')">
-        <img class="icon_topBar" width="20" height="20" src="static/img/admin/dashboard.svg">
-        <p class="top_bar_font_color">admin panel</p>
+      <div id="admin_panel" class="small_button_style block_select button_margin" style="top: 50px; width: 180px; left: 10px; display: none;" onclick="openInNewTab('admin')">
+        <img class="icon" width="20" height="20" src="static/img/admin/dashboard.svg">
+        <p>admin panel</p>
       </div>
 
       <div id="other_options" style="position: absolute; top: 42px; width: 100%;">
@@ -322,14 +325,10 @@
       <ul id="path_list" style="position: absolute; top: -14px;"></ul>
     </div>
 
-    <div id="terminal_list_div" class="terminal_list_div" style="display: none">
-
-    </div>
-
     <!--кнопка для открытия настроек-->
     <div id="user_button" class="user_button_no_selected_color user_button block_select button_margin" onclick="open_close_user_button()">
       <img class="icon_topBar" style="margin: 0px 15px" width="25" height="25" src="static/img/user.svg">
-      <p class="top_bar_font_color" id="user_status" style="margin: -22px 45px; color: #959DA5">user</p>
+      <p class="top_bar_font_color" id="user_status" style="margin: -22px 45px; color: #959DA5; font-size: 1em">user</p>
       <p class="top_bar_font_color" id="user_name" style="margin: 15px 45px">100LAR</p>
       <img id="user_button_triangle" class="icon_topBar" style="position:absolute; right: 10px; top: 10px" width="10" height="10" src="static/img/triangle.svg">
     </div>
