--- a/app/static/css/terminal.1.css
+++ b/app/static/css/terminal.1.css
@@ -1,46 +1,10 @@
-/*
-.terminal_button_no_selected_color {
-  background-color: var(--top-color);
-  border-bottom: 1px solid var(--top-border-color);
-}
-
-.terminal_button_no_selected_color:hover {
-  background-color: var(--top-hover-color);
-}
-
-.terminal_button_selected_color {
-  background-color: var(--left-color);
-  border-bottom: none;
-}
-
-.terminal_button_style {
-  position: fixed;
-  top: 0px;
-  left: 500px;
-  width: 150px;
-  height: 45px;
-  border-left: 1px solid var(--top-border-color);
-  border-right: 1px solid var(--top-border-color);
-
-  cursor: pointer;
-}
-
-.terminal_button_style:hover {
-  background-color: var(--hover-color);
-}
-
-.terminal_button_style_online {
-  font-size: 0.9em;
-  color: #959DA5
-}
-*/
 .terminal_button_style {
   position: absolute;
   width: 200px;
   height: 45px;
   border-top: 1px solid var(--main-border-color);
   border-bottom: 1px solid var(--main-border-color);
-  background-color: var(--main-color);
+  /* background-color: var(--terminal-list-bg); */
 
   top: 250px;
   left: 0px;
@@ -55,4 +19,13 @@
 .terminal_button_style_online {
   font-size: 0.9em;
   color: #959DA5
+}
+
+.terminal_list_div {
+  position: absolute;
+  top: 296px;
+  bottom: 35px;
+  width: var(--width-left-bar);
+  /* background-color: var(--hover-color); */
+  /* background-color: var(--terminal-list-bg); */
 }
