--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -68,7 +68,7 @@
         <img class="icon" id="terminal_button_triangle" style="position:absolute; right: 15px; top: 15px; rotate: 0deg" width="10" height="10" src="static/img/triangle.svg">
       </div>
 
-      <div class="terminal_list_div">
+      <div id="terminal_list_div" class="terminal_list_div" style="display: none;">
         <ul id="terminal_list"></ul>
       </div>
 
