--- a/app/templates/main.html
+++ b/app/templates/main.html
@@ -68,8 +68,10 @@
         <img class="icon" id="terminal_button_triangle" style="position:absolute; right: 15px; top: 15px; rotate: 0deg" width="10" height="10" src="static/img/triangle.svg">
       </div>
 
-      <div id="terminal_list_div" class="terminal_list_div" style="display: none;">
-        <ul id="terminal_list"></ul>
+      <div id="terminal_list_div" class="terminal_list_div_scroll scroll_style" style="display: none;">
+        <div class="terminal_list_div">
+          <ul id="terminal_list"></ul>
+        </div>
       </div>
 
       <!--информация о диске-->
@@ -484,5 +486,6 @@
   <script type="text/javascript" src="static/js/upload_file.1.js"></script>
   <script type="text/javascript" src="static/js/player.1.js"></script>
   <script type="text/javascript" src="static/js/file.1.js"></script>
+  <script type="text/javascript" src="static/js/terminal.1.js"></script>
 
 </html>
