--- a/app/static/css/terminal.1.css
+++ b/app/static/css/terminal.1.css
@@ -5,6 +5,8 @@
   border-top: 1px solid var(--main-border-color);
   border-bottom: 1px solid var(--main-border-color);
   /* background-color: var(--terminal-list-bg); */
+  border-radius: 8px 8px 0px 0px;
+  background-color: var(--hover-color);
 
   top: 250px;
   left: 0px;
@@ -21,11 +23,30 @@
   color: #959DA5
 }
 
-.terminal_list_div {
+.terminal_list_div_scroll {
   position: absolute;
   top: 296px;
   bottom: 35px;
   width: var(--width-left-bar);
   /* background-color: var(--hover-color); */
   /* background-color: var(--terminal-list-bg); */
+  overflow-y: scroll;
+  overflow-x: hidden;
+  direction: rtl;
+}
+
+.terminal_list_div {
+  width: 100%;
+  height: 100%;
+  direction: ltr;
+}
+
+.terminal_list_element {
+  width: var(--width-left-bar);
+  height: 45px;
+
+  padding: 0px;
+
+  border-bottom: 1px solid var(--main-border-color);
+  border-top: 1px solid var(--main-border-color);
 }
