--- a/app/static/css/dialog.1.css
+++ b/app/static/css/dialog.1.css
@@ -62,13 +62,13 @@
 }
 
 .dialog_close_button {
-  border-radius: 8px 0px 0px 0px;
+  border-radius: 0px 8px 0px 0px;
   position: absolute;
-  left: 0px;
+  right: 0px;
   top: 0px;
   width: 100px;
   height: 35px;
-  border-right: 1px solid var(--main-border-color);
+  border-left: 1px solid var(--main-border-color);
   background-color: var(--bg-color);
 
   cursor: pointer;
