--- a/app/static/css/terminal.1.css
+++ b/app/static/css/terminal.1.css
@@ -10,8 +10,6 @@
 
   top: 250px;
   left: 0px;
-
-  cursor: pointer;
 }
 
 .terminal_button_style:hover {
@@ -25,7 +23,7 @@
 
 .terminal_list_div_scroll {
   position: absolute;
-  top: 296px;
+  top: 297px;
   bottom: 35px;
   width: var(--width-left-bar);
   /* background-color: var(--hover-color); */
@@ -37,16 +35,64 @@
 
 .terminal_list_div {
   width: 100%;
-  height: 100%;
+  /* height: 100%; */
   direction: ltr;
+}
+
+.terminal_list_div ul {
+  margin: 0px;
 }
 
 .terminal_list_element {
   width: var(--width-left-bar);
-  height: 45px;
-
+  height: 40px;
   padding: 0px;
-
   border-bottom: 1px solid var(--main-border-color);
-  border-top: 1px solid var(--main-border-color);
+  /* margin-top: -14px; */
+}
+
+.terminal_list_element:hover {
+  background-color: var(--hover-color);
+}
+
+.terminal_list_delete {
+  display: none;
+  position: absolute;
+  left: 10px;
+  margin: 10px 0px;
+  cursor: pointer;
+}
+
+.terminal_list_icon {
+  display: block;
+  position: absolute;
+  left: 10px;
+  margin: 10px 0px;
+}
+
+.terminal_list_dot {
+  position: absolute;
+  font-size: 2em;
+  right: 10px;
+  margin-top: -3px;
+}
+
+.terminal_list_name {
+  position: absolute;
+  left: 40px;
+  margin: 15px 0px;
+}
+
+.terminal_list_type {
+  position: absolute;
+  left: 40px;
+  margin: 0px 0px;
+}
+
+.terminal_list_element:hover .terminal_list_delete {
+  display: block;
+}
+
+.terminal_list_element:hover .terminal_list_icon {
+  display: none;
 }
